fix tab and collapse slight shift bug

--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,16 @@
   padding: 30px;
 }
 
+.tab-pane:after {
+  content: '';
+  clear: both;
+  display: table;
+}
+
+body {
+  overflow-y: scroll;
+}
+
 .fa {
   color: #ddd;
   font-size: 60px;
